<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/continent_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Continent"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/source_sans_pro_semi_bold"
        android:visibility="gone"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray500"
        android:visibility="gone"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/statistics_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/line_1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_cases_label"
                        android:textSize="15sp"
                        android:textColor="@color/teal_200"
                        android:fontFamily="@font/source_sans_pro_regular"
                        />
                    <TextView
                        android:id="@+id/total_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="000000"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/source_sans_pro_regular"
                        />
                </LinearLayout>

                <View
                    android:id="@+id/line_1"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/line_1"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/active_label"
                        android:textSize="15sp"
                        android:textColor="@color/blue500"
                        android:fontFamily="@font/source_sans_pro_regular"
                        />
                    <TextView
                        android:id="@+id/active_cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="000000"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/source_sans_pro_regular"
                        />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/line_2"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered_label"
                        android:textSize="15sp"
                        android:textColor="@color/green500"
                        android:fontFamily="@font/source_sans_pro_regular"
                        />
                    <TextView
                        android:id="@+id/recovered_cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="000000"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/source_sans_pro_regular"
                        />
                </LinearLayout>

                <View
                    android:id="@+id/line_2"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/line_2"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths_label"
                        android:textSize="15sp"
                        android:textColor="@color/red500"
                        android:fontFamily="@font/source_sans_pro_regular"
                        />
                    <TextView
                        android:id="@+id/deaths_cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="000000"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/source_sans_pro_regular"
                        />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continent_label"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/source_sans_pro_regular"
                    />

                <TextView
                    android:id="@+id/country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    tools:text="Country"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/source_sans_pro_regular"
                    />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>